--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,22 @@ environment:
 dependencies:
   bloc: ^9.0.1
   dio: ^5.7.0
+  freezed_annotation: ^2.4.4
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   bloc_test: ^10.0.0
+  build_runner: ^2.4.13
+  freezed: ^2.5.7
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.8.0
   mocktail: ^1.0.4
   very_good_analysis: ^10.0.0
 
