--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,11 @@ environment:
 dependencies:
   bloc: ^9.0.1
   dio: ^5.7.0
-  freezed_annotation: ^2.4.4
-  flutter:
-    sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_localizations:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
+  freezed_annotation: ^2.4.4
   intl: ^0.20.2
   json_annotation: ^4.9.0
 
