--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   bloc: ^9.0.1
   dio: ^5.7.0
+  flutter:
+    sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_localizations:
     sdk: flutter
