Add assets directory structure for images, fonts, and animations
- Created assets/ directory with subdirectories
- Added .gitkeep files to maintain structure in Git
- Updated pubspec.yaml to register asset directories
- Added README.md with usage examples and best practices
- Ready to add custom images, fonts, and Lottie animations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,3 +33,16 @@ dev_dependencies:
 flutter:
   generate: true
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/fonts/
+    - assets/animations/
+
+  # Uncomment to add custom fonts
+  # fonts:
+  #   - family: CustomFont
+  #     fonts:
+  #       - asset: assets/fonts/CustomFont-Regular.ttf
+  #       - asset: assets/fonts/CustomFont-Bold.ttf
+  #         weight: 700
