Add custom icon to app UI
- Display icon.png in TaskListPage AppBar
- Display icon.png in CreateTaskPage header
- Add fallback to Material icons if image fails to load
- Icon now visible in main task list and create task screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,13 @@ flutter:
     - assets/fonts/
     - assets/animations/
 
+  # Custom app icon
+  # Run: flutter pub run flutter_launcher_icons
+  # flutter_icons:
+  #   android: true
+  #   ios: true
+  #   image_path: "assets/images/icon.png"
+
   # Uncomment to add custom fonts
   # fonts:
   #   - family: CustomFont
