--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.13
+  flutter_launcher_icons: ^0.14.1
   freezed: ^2.5.7
   flutter_test:
     sdk: flutter
@@ -36,10 +37,12 @@ flutter:
 
   assets:
     - assets/images/icon.png
-    - assets/images/PLACEHOLDER_EXAMPLE.txt
-    # Add more images as needed:
-    # - assets/images/logo.png
-    # - assets/images/background.jpg
+
+flutter_launcher_icons:
+  android: true
+  ios: false
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21
 
   # Uncomment to add custom fonts
   # fonts:
