--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   intl: ^0.20.2
   json_annotation: ^4.9.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   bloc_test: ^10.0.0
